Connected the messages framework that allows to display one-time notifications