@@ -61,3 +61,7 @@ ENV/
 !.vscode/launch.json 
 !.vscode/extensions.json 
 .history
+
+# SSL certificates
+*.crt
+*.key
