@@ -23,4 +23,23 @@
         </form>
         <p><a href="{% url "password_reset" %}">Forgotten your password?</a></p>
     </div>
+    <div class="social">
+        <ul>
+            <li class="facebook">
+                <a href="{% url "social:begin" "facebook" %}">
+                    Sign in with Facebook
+                </a>
+            </li>
+            <li class="twitter">
+                <a href="{% url "social:begin" "twitter" %}">
+                    Sign in with Twitter
+                </a>
+            </li>
+            <li class="google">
+                <a href="{% url "social:begin" "google-oauth2" %}">
+                    Sign in with Google
+                </a>
+            </li>
+        </ul>
+    </div>
 {% endblock %}
