@@ -21,6 +21,8 @@ from django.conf.urls.static import static
 urlpatterns = [
     path('admin/', admin.site.urls),
     path('account/', include('account.urls')),
+    path('social-auth/',
+        include('social_django.urls', namespace='social')),
 ]
 
 if settings.DEBUG:
